# ttt

./: CMakeLists.txt  README.md
include/: config.h  game.h  term.h  utils.h
src/: CMakeLists.txt  game.c  main.c  utils.c
src/unix/: term.c
src/windows/: term.c
